# msg_parser

./: CMakeLists.txt  README.md
component/crc/: crc.c  crc.h
component/msg_parser/: msg_decode.c  msg_encode.c  msg_parser.h
component/rt-ctrl/: rt_ctrl_cmd.c  rt_ctrl_cmd.h
src/: main.c
